Deleted old CSS file

--- a/public/results.html
+++ b/public/results.html
@@ -34,7 +34,7 @@
   <!-- 버튼 컨테이너 -->
   <div class="button-container">
     <button id="viewHistory">평가 기록 보기</button>
-    <button id="backToDashboard">관리 페이지로 돌아가기</button>
+    <button id="backToDashboard">관리 페이지</button>
   </div>
 
   <script>
