--- a/public/evaluation_history.html
+++ b/public/evaluation_history.html
@@ -14,7 +14,7 @@
   <!-- 회원 검색 -->
   <div class="search-container">
     <input type="text" id="searchClient" placeholder="회원 이름을 입력하세요..." />
-    <button id="showClientList">회원 목록 보기</button>
+    <button id="showClientList">회원 조회</button>
   </div>
 
   <!-- 평가 기록 섹션 -->
@@ -53,7 +53,7 @@
   <!-- 관리 페이지로 돌아가기 버튼 -->
   <button id="backToManagement" class="management-button">관리 페이지로 돌아가기</button>
   <p style="text-align: center; margin-top: 10px;">
-    <a href="dashboard_home.html">관리 페이지로 바로가기</a>
+    <a href="dashboard_home.html"></a>
   </p>
 
   <script>
@@ -246,3 +246,5 @@
   </script>
 </body>
 </html>
+
+
